--- a/gym.html
+++ b/gym.html
@@ -50,8 +50,8 @@
                         <div class="specific-gym-days">
                             <div class="specific-gym-days-title">
                                 MONDAY
-                                <button onclick="openOverlay('edit-workout-monday')" class="specific-gym-days-title-btn">
-                                    <img src="assets/icons/edit.png" alt="adicionar">
+                                <button onclick="openOverlay('edit-workout-monday')" class="btn-save">
+                                    Edit
                                 </button>
                             </div>
                             <div class="specific-gym-exercises">
@@ -120,12 +120,12 @@
                                             </div>
                                         </div>
                                         
-                                        <button onclick="addNewForm()" class="overlay-container-content-gym-add">
-                                            <img src="assets/icons/mais.png" alt="add">
+                                        <button onclick="addNewForm()" class="btn-add">
+                                            Add
                                         </button>
                                     </div>
                                     <div class="overlay-container-content-save">
-                                        <button>
+                                        <button class="btn-save">
                                             Save
                                         </button>
                                     </div>  
@@ -135,8 +135,8 @@
                         <div  class="specific-gym-days">
                             <div class="specific-gym-days-title">
                                 TUESDAY
-                                <button onclick="openOverlay('edit-workout-tuesday')" class="specific-gym-days-title-btn">
-                                    <img src="assets/icons/edit.png" alt="adicionar">
+                                <button onclick="openOverlay('edit-workout-monday')" class="btn-save">
+                                    Edit
                                 </button>
                             </div>
                             <div class="specific-gym-exercises">
@@ -170,8 +170,8 @@
                         <div class="specific-gym-days">
                             <div class="specific-gym-days-title">
                                 WEDNESDAY
-                                <button onclick="openOverlay('edit-workout-wednessday')" class="specific-gym-days-title-btn">
-                                    <img src="assets/icons/edit.png" alt="adicionar">
+                                <button onclick="openOverlay('edit-workout-monday')" class="btn-save">
+                                    Edit
                                 </button>
                             </div>
                             <div class="specific-gym-exercises">
@@ -195,8 +195,8 @@
                         <div class="specific-gym-days">
                             <div class="specific-gym-days-title">
                                 THURSDAY
-                                <button onclick="openOverlay('edit-workout-thursday')" class="specific-gym-days-title-btn">
-                                    <img src="assets/icons/edit.png" alt="adicionar">
+                                <button onclick="openOverlay('edit-workout-monday')" class="btn-save">
+                                    Edit
                                 </button>
                             </div>
                             <div class="specific-gym-exercises">
@@ -224,8 +224,8 @@
                         <div class="specific-gym-days">
                             <div class="specific-gym-days-title">
                                 FRIDAY
-                                <button onclick="openOverlay('edit-workout-friday')" class="specific-gym-days-title-btn">
-                                    <img src="assets/icons/edit.png" alt="adicionar">
+                                <button onclick="openOverlay('edit-workout-monday')" class="btn-save">
+                                    Edit
                                 </button>
                             </div>
                             <div class="specific-gym-exercises">
@@ -257,8 +257,8 @@
                         <div class="specific-gym-days">
                             <div class="specific-gym-days-title">
                                 SATURDAY
-                                <button onclick="openOverlay('edit-workout-saturday')" class="specific-gym-days-title-btn">
-                                    <img src="assets/icons/edit.png" alt="adicionar">
+                                <button onclick="openOverlay('edit-workout-monday')" class="btn-save">
+                                    Edit
                                 </button>
                             </div>
                             <div class="specific-gym-exercises">
@@ -294,8 +294,8 @@
                         <div class="specific-gym-days">
                             <div class="specific-gym-days-title">
                                 SUNDAY
-                                <button onclick="openOverlay('edit-workout-sunday')" class="specific-gym-days-title-btn">
-                                    <img src="assets/icons/edit.png" alt="adicionar">
+                                <button onclick="openOverlay('edit-workout-monday')" class="btn-save">
+                                    Edit
                                 </button>
                             </div>
                             <div class="specific-gym-exercises">
