--- a/tasks.html
+++ b/tasks.html
@@ -71,7 +71,7 @@
                                     <p class="specific-tasks-main-today-now-pendent">
                                         PENDENT TASK
                                     </p>
-                                    <button class="btn">
+                                    <button class="btn-save">
                                         Done
                                     </button>
                                 </div>
@@ -94,17 +94,14 @@
                             
                         </div>
                         <div class="specific-tasks-main-btns">
-                            <button onclick="openOverlay('add-task-btn')" class="btn">
-                                Add Task
-                                <img src="assets/icons/mais.png" alt="">
+                            <button onclick="openOverlay('add-task-btn')" class="btn-add">
+                                Add
                             </button>
-                            <button class="btn">
-                                Remove task
-                                <img src="assets/icons/menos.png" alt="">
+                            <button class="btn-remove">
+                                Remove
                             </button>
-                            <button class="btn icons">
-                                Forgotten tasks
-                                <img src="assets/icons/question.png" alt="">
+                            <button class="btn-save">
+                                Forgotten
                             </button>
                         </div>
                     </div>
