--- a/gym.html
+++ b/gym.html
@@ -25,7 +25,7 @@
 
         <main>
             <aside class="menu box">
-                <a class="user">
+                <a class="user" href="user.html">
                     <img src="assets/icons/user.png">
                     <h5>USERNAME</h5>
                 </a>
