--- a/tasks.html
+++ b/tasks.html
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <aside class="menu box">
-                <a class="user">
+                <a class="user" href="user.html">
                     <img src="assets/icons/user.png">
                     <h5>USERNAME</h5>
                 </a>
