--- a/user.html
+++ b/user.html
@@ -30,7 +30,7 @@
                     <h5>USERNAME</h5>
                 </a>
                 <nav id="navegation">
-                    <a class="active"><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
+                    <a href="index.html"><img src="assets/icons/dashboard.png"><span>Dashboard</span></a>
                     <a href="finance.html"><img src="assets/icons/money.png"><span>Finance</span></a>
                     <a href="gym.html"><img src="assets/icons/gym.png"><span>Gym</span></a>
                     <a href="tasks.html"><img src="assets/icons/checklist.png"><span>Tasks</span></a>
@@ -40,46 +40,13 @@
                 <img src="assets/icons/down arrow.png" alt="down arrow">
             </button>
 
-            <section class="cards">
-                <a href="finance.html" class="card">
-                    <header><h3>Finance</h3><img src="assets/icons/lucro.png"></header>
-                    <p>LeftOver:</p>
-                    <h2>$ 234.524,50</h2>
-                    <h4>Month Economy<br>12%</h4>
-                </a>
-
-                <a href="gym.html" class="card">
-                    <header><h3>Gym</h3><img src="assets/icons/heart.png"></header>
-                    <p>Workout per week: <strong>4/5</strong></p>
-                    <img src="assets/auxiliar/linha progresso.png">
-                    <small>Next: Chest, Triceps, Shoulders</small>
-                </a>
-
-                <a href="tasks.html" class="card">
-                    <header><h3>Tasks</h3><img src="assets/icons/check.png"></header>
-                    <div class="scroll">
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                        <p>- Task</p>
-                    </div>
-                </a>
-
-                <a href="tasks.html" class="card graph">
-                    <header><h3>Goals progress</h3></header>
-                    <img src="assets/auxiliar/Grafico-de-Progresso-11.png">
-                </a>
-
-                <a href="finance.html"class="card graph">
-                    <header><h3>Financial progress</h3></header>
-                    <img src="assets/auxiliar/grafico de linha.png">
-                </a>
+            <section class="content-box">
+                <div class="content-title">
+                    <h3>Hello, [USERNAME]!</h3>
+                </div>
+                <div class="specific-content">
+                    XXX
+                </div>
             </section>
         </main>
 
