--- a/finance.html
+++ b/finance.html
@@ -438,7 +438,10 @@
                             
                         </div> 
                         <div id="finance-duties" class="finance-page">
-                            Duties
+                            <div class="finance-duties-self">
+                                <div class="checkbox" onclick="GeneralCheckbox(this)">🗸</div>
+                                <p>Duty 1</p>
+                            </div>
                         </div> 
                     </div>
 
